crates/ty_python_types/resources/mdtest/snapshots/no_matching_overload…_-_No_matching_overload…_-_Call_to_function_wit…_(dd80c593d9136f35).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: no_matching_overload.md - No matching overload diagnostics - Call to function with many unmatched overloads
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/no_matching_overload.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | class Foo: ...
 4 | 
 5 | @overload
 6 | def foo(a: int, b: int, c: int): ...
 7 | @overload
 8 | def foo(a: str, b: int, c: int): ...
 9 | @overload
10 | def foo(a: int, b: str, c: int): ...
11 | @overload
12 | def foo(a: int, b: int, c: str): ...
13 | @overload
14 | def foo(a: str, b: str, c: int): ...
15 | @overload
16 | def foo(a: int, b: str, c: str): ...
17 | @overload
18 | def foo(a: str, b: str, c: str): ...
19 | @overload
20 | def foo(a: int, b: int, c: int): ...
21 | @overload
22 | def foo(a: float, b: int, c: int): ...
23 | @overload
24 | def foo(a: int, b: float, c: int): ...
25 | @overload
26 | def foo(a: int, b: int, c: float): ...
27 | @overload
28 | def foo(a: float, b: float, c: int): ...
29 | @overload
30 | def foo(a: int, b: float, c: float): ...
31 | @overload
32 | def foo(a: float, b: float, c: float): ...
33 | @overload
34 | def foo(a: str, b: str, c: str): ...
35 | @overload
36 | def foo(a: float, b: str, c: str): ...
37 | @overload
38 | def foo(a: str, b: float, c: str): ...
39 | @overload
40 | def foo(a: str, b: str, c: float): ...
41 | @overload
42 | def foo(a: float, b: float, c: str): ...
43 | @overload
44 | def foo(a: str, b: float, c: float): ...
45 | @overload
46 | def foo(a: float, b: float, c: float): ...
47 | def foo(a, b, c): ...
48 | 
49 | foo(Foo(), Foo())  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of function `foo` matches arguments
  --> src/mdtest_snippet.py:49:1
   |
47 | def foo(a, b, c): ...
48 |
49 | foo(Foo(), Foo())  # error: [no-matching-overload]
   | ^^^^^^^^^^^^^^^^^
   |
info: First overload defined here
 --> src/mdtest_snippet.py:6:5
  |
5 | @overload
6 | def foo(a: int, b: int, c: int): ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 | @overload
8 | def foo(a: str, b: int, c: int): ...
  |
info: Possible overloads for function `foo`:
info:   (a: int, b: int, c: int) -> Unknown
info:   (a: str, b: int, c: int) -> Unknown
info:   (a: int, b: str, c: int) -> Unknown
info:   (a: int, b: int, c: str) -> Unknown
info:   (a: str, b: str, c: int) -> Unknown
info:   (a: int, b: str, c: str) -> Unknown
info:   (a: str, b: str, c: str) -> Unknown
info:   (a: int, b: int, c: int) -> Unknown
info:   (a: int | float, b: int, c: int) -> Unknown
info:   (a: int, b: int | float, c: int) -> Unknown
info:   (a: int, b: int, c: int | float) -> Unknown
info:   (a: int | float, b: int | float, c: int) -> Unknown
info:   (a: int, b: int | float, c: int | float) -> Unknown
info:   (a: int | float, b: int | float, c: int | float) -> Unknown
info:   (a: str, b: str, c: str) -> Unknown
info:   (a: int | float, b: str, c: str) -> Unknown
info:   (a: str, b: int | float, c: str) -> Unknown
info:   (a: str, b: str, c: int | float) -> Unknown
info:   (a: int | float, b: int | float, c: str) -> Unknown
info:   (a: str, b: int | float, c: int | float) -> Unknown
info:   (a: int | float, b: int | float, c: int | float) -> Unknown
info: Overload implementation defined here
  --> src/mdtest_snippet.py:47:5
   |
45 | @overload
46 | def foo(a: float, b: float, c: float): ...
47 | def foo(a, b, c): ...
   |     ^^^^^^^^^^^^
48 |
49 | foo(Foo(), Foo())  # error: [no-matching-overload]
   |
info: rule `no-matching-overload` is enabled by default

```
